--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -8,7 +8,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,4 +17,10 @@
 }
 
 .loading {
+  display: flex;
+  justify-content: center;
+}
+
+.spinner-border {
+  color: blue;
 }
