--- a/react-frontend/src/Components/ChatList/ChatList.css
+++ b/react-frontend/src/Components/ChatList/ChatList.css
@@ -1,9 +1,9 @@
 .ChatList {
   display: block;
-  height: 89vh;
+  height: 91vh;
   overflow-y: auto;
-  /* border: 1px solid red; */
-  margin: 9vh 2vh 2vh 2vh;
+  background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
+  margin: 8vh 1vh 1vh 1vh;
   border-radius: 5px;
   box-shadow: 0.3px 0.3px 4px lightgray, -0.3px -0.3px 4px lightgray,
     0.3px 0.3px 4px lightgray, -0.3px -0.3px 4px lightgray;
@@ -13,7 +13,7 @@
 .ChatList .ChatListCard a {
   display: block;
   text-decoration: none;
-  color: rgb(54, 54, 54);
+  /* color: green; */
   /* border: 1px solid; */
   /* border: 1px solid red; */
   display: flex;
@@ -32,24 +32,30 @@
   justify-content: center;
   align-items: center;
   /* border: 1px solid; */
+  color: rgb(36, 36, 36);
   margin: 0 10px;
-  background-color: rgb(205, 235, 247);
+
+  background-color: rgb(255, 230, 233);
 }
 
 .ChatList .name {
-  border-bottom: 1px solid;
+  border-bottom: 1px solid rgb(148, 148, 148);
   height: 7.8vh;
   flex-basis: 100%;
   display: flex;
   align-items: center;
+  /* border: 1px solid; */
+  /* flex-basis: 100%; */
+  color: black;
 }
 
 .ChatList .read-container {
   /* border: 1px solid red; */
   margin-right: 10px;
   height: 7.8vh;
-
-  border-bottom: 1px solid;
+  color: rgb(41, 41, 41);
+  border-bottom: 1px solid rgb(148, 148, 148);
+  min-width: 100px;
 }
 
 .ChatList .date-container {
@@ -103,4 +109,15 @@
   font-size: 1.1rem;
   /* align-items: center; */
   /* box-shadow: 0.3px 0.3px 4px darkgray, -0.3px -0.3px 4px darkgray; */
+}
+
+@media all and (min-width: 700px) {
+  .ChatList {
+    width: 700px;
+    /* margin: 7vh auto; */
+    margin-left: auto;
+    margin-right: auto;
+    /* border-left: 1px solid; */
+    /* border-right: 1px solid; */
+  }
 }
