--- a/react-frontend/src/Components/CommentCard/CommentCard.css
+++ b/react-frontend/src/Components/CommentCard/CommentCard.css
@@ -2,7 +2,9 @@
   /* border: 1px solid; */
   display: flex;
   /* padding: 5px; */
+  max-width: 85%;
   margin: 5px 0px;
+  /* width: 100%; */
   /* position: relative; */
   /* align-items: center; */
 }
@@ -34,7 +36,13 @@
   text-decoration: none;
   font-size: 1rem;
   display: block;
-  /* color: black; */
+  color: black;
+  /* border: 1px solid red; */
+}
+
+.CommentCard .name {
+  /* border: 1px solid; */
+  width: fit-content;
 }
 
 .CommentCard .name a:hover {
