--- a/react-frontend/src/Components/MyPosts/MyPostDelete.css
+++ b/react-frontend/src/Components/MyPosts/MyPostDelete.css
@@ -1,7 +1,7 @@
 .MyPostDelete {
   height: 100vh;
   width: 100%;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   position: fixed;
   top: 0;
   right: 0;
@@ -19,10 +19,10 @@
 .MyPostDelete .dialog-box {
   width: 80%;
   padding: 20px;
-  border: 1px solid;
+  /* border: 1px solid; */
   background-color: white;
   width: 80%;
-  border: 1px solid green;
+  /* border: 1px solid green; */
   min-height: 20vh;
   background-color: rgba(255, 255, 255, 1);
   border-radius: 5px;
