--- a/react-frontend/src/Components/MyPosts/MyPostForm.css
+++ b/react-frontend/src/Components/MyPosts/MyPostForm.css
@@ -1,7 +1,7 @@
 .MyPostForm {
   height: 100vh;
   width: 100%;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   position: fixed;
   top: 0;
   right: 0;
@@ -23,7 +23,7 @@
 .MyPostForm .error,
 .MyPostForm .form-container {
   width: 80%;
-  border: 1px solid green;
+  /* border: 1px solid green; */
   min-height: 55vh;
   background-color: rgba(255, 255, 255, 1);
   border-radius: 5px;
