--- a/react-frontend/src/Components/UserDetail/UserAbout.css
+++ b/react-frontend/src/Components/UserDetail/UserAbout.css
@@ -1,12 +1,16 @@
 .UserAbout {
   background-color: white;
-  margin: 0 20px;
-  border-radius: 4px;
+  margin: 0 1vh 1vh 1vh;
+  border-radius: 5px;
   padding: 20px;
+  /* border: 1px solid; */
+  /* z-index: -1; */
+  background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
 }
 
 .UserAbout .form-group {
   /* border: 1px solid; */
+  /* z-index: -1; */
   display: flex;
   font-size: 1rem;
   /* align-items: center; */
@@ -40,6 +44,7 @@
   width: fit-content;
   padding: 3px 10px;
   /* border: 1px solid; */
+
   background-color: rgb(226, 226, 226);
   border-radius: 4px;
   box-shadow: 0.3px 0.3px 5px darkgray, -0.3px -0.3px 5px darkgray;
@@ -120,4 +125,15 @@
   border-radius: 8px;
 
   box-shadow: 0.5px 0.5px 5px darkgray, -0.5px -0.5px 5px darkgray;
+}
+
+@media all and (min-width: 700px) {
+  .UserAbout {
+    width: 700px;
+    /* margin: 7vh auto; */
+    margin-left: auto;
+    margin-right: auto;
+    /* border-left: 1px solid; */
+    /* border-right: 1px solid; */
+  }
 }
