--- a/react-frontend/src/Components/UserDetail/UserNav.css
+++ b/react-frontend/src/Components/UserDetail/UserNav.css
@@ -24,3 +24,10 @@
   color: blue;
   border-bottom: 2.5px solid blue;
 }
+
+.UserNav {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: white;
+}
