--- a/react-frontend/src/Components/Navigation/Navigation.css
+++ b/react-frontend/src/Components/Navigation/Navigation.css
@@ -20,8 +20,8 @@
 }
 
 .Navigation .SearchBar {
-  /* border: 1px solid blue; */
-  width: 68%;
+  border: 1px solid blue;
+  width: 60%;
   padding: 10px;
   display: flex;
   align-items: center;
@@ -62,7 +62,8 @@
 .Navigation .left-nav {
   display: flex;
   justify-content: space-evenly;
-  width: 32%;
+  width: 40%;
+  border: 1px solid;
   /* border: 1px solid rgb(220, 246, 255); */
 }
 
@@ -72,7 +73,7 @@
 .Home .Hamburger {
   position: fixed;
   top: 7vh;
-  right: 20px;
+  right: 10px;
   box-shadow: 0.3px 0.3px 5px darkgray, -0.3px -0.3px 5px darkgray;
   /* border: 1px solid yellow; */
   width: fit-content;
