--- a/react-frontend/src/Components/Explore/Explore.css
+++ b/react-frontend/src/Components/Explore/Explore.css
@@ -111,6 +111,11 @@
   /* box-shadow: 0.3px 0.3px 4px darkgray, -0.3px -0.3px 4px darkgray; */
 }
 
+.Explore .title-msg {
+  font-size: 1.4rem;
+  border-bottom: 1px solid black;
+}
+
 @media all and (max-width: 800px), (max-device-width: 800px) {
   .Explore .ExploreCard .name-container a .name {
     font-size: 1rem;
