--- a/react-frontend/src/Components/Home/Home.css
+++ b/react-frontend/src/Components/Home/Home.css
@@ -17,7 +17,7 @@
   align-items: center;
   font-size: 2.5rem;
   font-weight: bolder;
-  font-family: "Recursive", sans-serif;
+  font-family: "Akaya Telivigala", cursive;
   background-image: linear-gradient(
     to top,
     #0c3483 0%,
