--- a/react-frontend/src/Components/MyPosts/MyPostForm.css
+++ b/react-frontend/src/Components/MyPosts/MyPostForm.css
@@ -118,3 +118,12 @@
 .MyPostForm .errors {
   color: red;
 }
+
+@media all and (min-width: 700px) {
+  .MyPostForm .form-container,
+  .MyPostForm .error {
+    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
