--- a/react-frontend/src/Components/UserDetail/UserDetail.css
+++ b/react-frontend/src/Components/UserDetail/UserDetail.css
@@ -22,6 +22,7 @@
   text-align: center;
   background-color: white;
   padding: 20px;
+  /* border: 1px solid; */
   font-size: large;
   font-weight: 450;
   border-bottom: 1px solid darkgray;
