--- a/react-frontend/src/Components/UserDetail/UserNav.css
+++ b/react-frontend/src/Components/UserDetail/UserNav.css
@@ -28,6 +28,7 @@
 .UserNav {
   position: sticky;
   top: 0;
-  z-index: 1;
+  /* border: 1px solid; */
+  /* z-index: 1; */
   background-color: white;
 }
