--- a/react-frontend/src/Components/ChatList/ChatList.css
+++ b/react-frontend/src/Components/ChatList/ChatList.css
@@ -62,6 +62,7 @@
   display: flex;
   /* border: 1px solid green; */
   font-size: 0.75rem;
+  justify-content: space-between;
   height: 3.5vh;
   padding: 2px;
   align-items: center;
