--- a/react-frontend/src/Components/MyPosts/MyPostForm.css
+++ b/react-frontend/src/Components/MyPosts/MyPostForm.css
@@ -6,8 +6,8 @@
   top: 0;
   right: 0;
   left: 0;
-  /* right: 50%; */
-  /* transform: translate(-50%, -50%); */
+  right: 0;
+  /* transform: translateX(-50%); */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -24,7 +24,8 @@
 .MyPostForm .form-container {
   width: 80%;
   /* border: 1px solid green; */
-  min-height: 55vh;
+  height: 70vh;
+  overflow-y: auto;
   background-color: rgba(255, 255, 255, 1);
   border-radius: 5px;
   padding: 25px 30px 30px 30px;
