--- a/react-frontend/src/Components/Chat/CharCard.css
+++ b/react-frontend/src/Components/Chat/CharCard.css
@@ -24,14 +24,14 @@
   width: 100%;
   font-size: 1.2rem;
   border-radius: 15px;
-  height: 6vh;
+  height: 20px;
   outline: none;
   border: none;
   padding: 2px 15px;
 }
 
 .ChatCard .send-btn button {
-  height: 6vh;
+  height: 20px;
   border: none;
   padding: 0 10px;
   border-radius: 10px;
