--- a/react-frontend/src/Components/Chat/CharCard.css
+++ b/react-frontend/src/Components/Chat/CharCard.css
@@ -1,6 +1,7 @@
 .ChatCard .chat-map-container {
   overflow-y: auto;
   height: 79vh;
+  /* border: 1px solid; */
 }
 
 .ChatCard form {
@@ -8,11 +9,12 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 7vh;
+  height: max(7vh, 45px);
   background-color: black;
   display: flex;
   align-items: center;
   padding: 0 5px;
+  /* border: 1px solid red; */
 }
 
 .ChatCard .form-group {
@@ -24,14 +26,14 @@
   width: 100%;
   font-size: 1.2rem;
   border-radius: 15px;
-  height: 20px;
+  height: 40px;
   outline: none;
   border: none;
   padding: 2px 15px;
 }
 
 .ChatCard .send-btn button {
-  height: 20px;
+  height: 40px;
   border: none;
   padding: 0 10px;
   border-radius: 10px;
