--- a/react-frontend/src/Components/Chat/ChatMap.css
+++ b/react-frontend/src/Components/Chat/ChatMap.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: flex-end;
   position: relative;
-  margin: 20px 0;
+  margin: 20px 0px;
 }
 
 .ChatMap .person {
@@ -102,4 +102,11 @@
   /* border: 1px solid; */
   margin-bottom: 10px;
   color: white;
+}
+
+@media all and (max-device-width: 600px) {
+  .ChatMap:last-child {
+    /* border: 1px solid red; */
+    margin-bottom: max(8vh, 50px);
+  }
 }
