--- a/react-frontend/src/Components/UserDetail/UserPost.css
+++ b/react-frontend/src/Components/UserDetail/UserPost.css
@@ -1,7 +1,6 @@
 .UserPost .UserPostCard {
   padding: 20px;
   border-bottom: 1px solid lightgray;
-  /* border: 1px solid red; */
   margin: 1.3vh 1vh;
   /* background-color: white; */
   /* background-image: linear-gradient(-20deg, #e9defa 0%, #fbfcdb 100%); */
@@ -147,6 +146,8 @@
   font-size: 1rem;
   line-height: 110%;
   text-align: justify;
+  word-break: break-all;
+  /* word-wrap: break-word; */
 }
 
 .UserPost .post-content::first-line {
@@ -228,14 +229,17 @@
 
 .UserPost:not(.UserPost.myaccount) {
   /* border: 1px solid red; */
-  margin-top: 7vh;
-  height: 93vh;
+  /* margin-top: 10vh; */
+  height: 92vh;
   overflow-y: auto;
 }
-
 .UserPost.myaccount {
   margin-top: 0;
   height: fit-content;
+}
+
+.UserPost {
+  margin-top: 8vh;
 }
 
 .UserPost .post-date {
